--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "Boilerplate for React and Express",
   "main": "server.js",
   "scripts": {
+    "client-install": "cd client && npm install",
     "start": "node server.js",
-    "watch": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Alexis GRIMONPREZ",
   "license": "MIT",
   "dependencies": {
     "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0"
